# DashCamera

./: .gitignore  build.gradle  gradle.properties  other.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/askey/dvr/cdr7010/dashcam/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/askey/dvr/cdr7010/dashcam/: ICommunication.aidl  ICommunicationCallback.aidl  IEcall.aidl  IEcallCallback.aidl  IManualUpload.aidl  IManualUploadCallback.aidl  ITTSAidlInterface.aidl
app/src/main/aidl/com/askey/dvr/cdr7010/dashcam/server/: ITTSAidlInterface.aidl
app/src/main/aidl/com/jvckenwood/communication/: ICommunication.aidl  ICommunicationCallback.aidl  IEventDetection.aidl  IEventDetectionCallback.aidl  IEventSending.aidl  IMainApp.aidl  IMainAppCallback.aidl  IVersionUp.aidl  IVersionUpCallback.aidl
app/src/main/aidl/com/jvckenwood/versionup/: IMainApp.aidl  IMainAppCallback.aidl
app/src/main/assets/: eventlist_en.xml  eventlist_jp.xml  fragment.glfs  vertex.glvs
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/mediabuffer/: CMakeLists.txt  MediaBuffer.cpp  MediaBuffer.h  jniutils.h  mediabuffer_jni.cpp
app/src/main/java/com/askey/dvr/cdr7010/dashcam/activity/: DialogActivity.java  NoticeActivity.java  UpdateCompleteActivity.java  VersionUpActivity.java
app/src/main/java/com/askey/dvr/cdr7010/dashcam/adas/: AdasController.java  AdasSettingObserver.java  AdasStateControl.java  AdasStateListener.java  AdasStatistics.java  FcGetter.java  ImageRecord.java  JkcAdasStateControl.java  Profiler.java  SystemPropertiesProxy.java
app/src/main/java/com/askey/dvr/cdr7010/dashcam/core/: DashCam.java  (+3 more)
app/src/main/java/com/askey/dvr/cdr7010/filemanagement/: ItemData.java
app/src/main/res/layout/: activity_camera.xml  activity_notice.xml  activity_update_succ.xml  activity_version_up.xml  dialog_comm.xml  dialog_sdcard.xml  dialog_warning.xml  fragment_camera2_preview.xml  fragment_camera_record.xml  fragment_insurance.xml  fragment_notice.xml  fragment_upgrade_succ.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/main/res/values-en/: strings.xml
app/src/test/java/com/askey/dvr/cdr7010/dashcam/: ExampleUnitTest.java
(+171 files in other folders)
